--- a/credit/templates/layout.html
+++ b/credit/templates/layout.html
@@ -35,13 +35,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'credit:dashboard' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Send</a>
+          <a class="nav-link" href="{% url 'credit:send' %}">Send</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Recieve</a>
+          <a class="nav-link" href="{% url 'credit:recieve' %}">Recieve</a>
         </li>
 
       </ul>
