--- a/credit/templates/recieve.html
+++ b/credit/templates/recieve.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Amount</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Amount">
+      <input type="password" name="amount" class="form-control" id="exampleInputPassword1" placeholder="Amount">
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
